update eqType
